--- a/index.html
+++ b/index.html
@@ -1,63 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-        </ul>
+    <header class="page-header">
+        <nav class="menu-nav">
+            <a class="logo" href="./index.html">
+                <span class="logo-blue">Web</span><span class="logo-black">Studio</span>
+            </a>
+            <ul class="site-navigation">
+                <li class="studio-nav"><a href="./index.html">Studio</a></li>
+                <li class="portfolio-nav"><a href="portfolio.html">Portfolio</a></li>
+                <li class="contacts-nav"><a href="">Contacts</a></li>
+            </ul>
         </nav>
-        <address>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-        </ul>
+        <address class="address">
+            <ul class="contact-info">
+                <li class="email">
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="phone-number">
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
-            </header>
+    </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero_h1">Effective Solutions for Your Business</h1>
+            <button type="button" class="order-service-but">
+                <span class="order-service-txt">
+                    Order Service
+                </span>
+            </button>
         </section>
-        <section>
-            <h2>Features</h2>
-            <ul>
-                <li>
+        <section class="features-sect">
+            <h2 hidden>Features</h2>
+            <ul class="features-ul">
+                <li class="feature">
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business <br>
-                    problem to walk away with the <br> perfect and creative solution.</p>
+                        problem to walk away with the <br> perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="feature">
                     <h3>Punctuality</h3>
-                    <p>Bring the key message to the <br> brand's audience for the best price <br> within the shortest possible time.</p>
+                    <p>Bring the key message to the <br> brand's audience for the best price <br> within the shortest
+                        possible time.</p>
                 </li>
-                <li>
+                <li class="feature">
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that <br> present the strongest digital growth <br> opportunities and minimize risk.</p>
+                    <p>Research and confirm brands that <br> present the strongest digital growth <br> opportunities and
+                        minimize risk.</p>
                 </li>
-                <li>
+                <li class="feature">
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital <br> experiences. We bring forth a deep <br> passion for problem-solving.</p>
+                    <p>Design practice focused on digital <br> experiences. We bring forth a deep <br> passion for
+                        problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="examples-sec"> 
             <h2>What are we doing</h2>
-            <ul>
+            <ul class="examples">
                 <li>
                     <img src="./images/mac_example.jpg" alt="Mac Example" width="360">
                 </li>
@@ -69,26 +86,26 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="team-section">
             <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264">
+            <ul class="team-section-ul">
+                <li class="item">
+                    <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" height="260" width="264"class="team-img">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264">
+                <li class="item">
+                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260" class="team-img">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264">
+                <li class="item">
+                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" class="team-img">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
+                <li class="item">
+                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" class="team-img">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -96,9 +113,12 @@
         </section>
     </main>
 
-    <footer>
-            <a href="./index.html">WebStudio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="logo" href="./index.html">
+            <span class="logo-blue">Web</span><span class="logo-white">Studio</span>
+        </a>
+        <p>Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
     </footer>
 </body>
+
 </html>
