Little changes to the text styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
         <section class="hero">
-            <h1 class="hero_h1">Effective Solutions for Your Business</h1>
+            <h1 class="hero_h1">Effective Solutions <br> for Your Business</h1>
             <button type="button" class="order-service-but">
                 <span class="order-service-txt">
                     Order Service
